Fixed logs overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -236,6 +236,7 @@ button.icon {
 .log-list {
     max-width: 100%;
     max-height: 500px;
+    overflow: auto;
 }
 
 .log-list .log-item {
